// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests Metadata.stories ContainerizedTask 1`] = `
<div>
  <div
    class="css-1ej7kz3-Container egzqr3n0"
  >
    <div
      class="css-1l8tpk-SiderCard e1am38ss0 leafygreen-ui-1ecxdul"
    >
      <div>
        <p
          class="css-1k03zl5-Title e1ul56zb1 leafygreen-ui-1miy0xp"
        >
          Task Metadata
        </p>
        <hr
          class="css-qqg5h5-Divider eb6szep0"
        />
      </div>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-build-variant"
      >
        Build Variant:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="build-variant-link"
          href="/version/spruce_ubuntu1604_e0ece5ad52ad01630bdf29f55b9382a26d6256b3_20_08_26_19_20_41/tasks?page=0&variant=%5Eubuntu1604%24"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            Ubuntu 16.04
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-project"
      >
        Project:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="project-link"
          href="/project/spruce/patches"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            spruce
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Submitted by: 
        mohamed.khelif
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Estimated time to start:
         
        <span
          data-cy="task-metadata-estimated_start"
        >
          1s
        </span>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-base-commit-duration"
      >
        Base commit duration: 
        nullms
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Base commit:
         
        <a
          class="lg-ui-0000 leafygreen-ui-hvznge"
          data-cy="base-task-link"
          href="/task/spruce_ubuntu1604_e2e_test_e0ece5ad52ad01630bdf29f55b9382a26d6256b3_20_08_26_19_20_41"
        >
          <code
            class="leafygreen-ui-i6ovbf"
          >
            e0ece5a
          </code>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-description"
      >
        <span>
          Failing command: Long description that requirese use of the inline definition component. This would ...
           
          <span
            class="leafygreen-ui-vm4wms"
            tabindex="0"
          >
            <small
              class="css-1ghrn41-ButtonText eq9i5u70 leafygreen-ui-6flbwy"
            >
              more
            </small>
          </span>
        </span>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Container:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="task-pod-link"
          href="/container/pod_id"
          target="_self"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            pod_id
          </span>
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Metadata.stories Default 1`] = `
<div>
  <div
    class="css-1ej7kz3-Container egzqr3n0"
  >
    <div
      class="css-1l8tpk-SiderCard e1am38ss0 leafygreen-ui-1ecxdul"
    >
      <div>
        <p
          class="css-1k03zl5-Title e1ul56zb1 leafygreen-ui-1miy0xp"
        >
          Task Metadata
        </p>
        <hr
          class="css-qqg5h5-Divider eb6szep0"
        />
      </div>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-build-variant"
      >
        Build Variant:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="build-variant-link"
          href="/version/spruce_ubuntu1604_e0ece5ad52ad01630bdf29f55b9382a26d6256b3_20_08_26_19_20_41/tasks?page=0&variant=%5Eubuntu1604%24"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            Ubuntu 16.04
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-project"
      >
        Project:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="project-link"
          href="/project/spruce/patches"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            spruce
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Submitted by: 
        mohamed.khelif
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Estimated time to start:
         
        <span
          data-cy="task-metadata-estimated_start"
        >
          1s
        </span>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-base-commit-duration"
      >
        Base commit duration: 
        nullms
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Base commit:
         
        <a
          class="lg-ui-0000 leafygreen-ui-hvznge"
          data-cy="base-task-link"
          href="/task/spruce_ubuntu1604_e2e_test_e0ece5ad52ad01630bdf29f55b9382a26d6256b3_20_08_26_19_20_41"
        >
          <code
            class="leafygreen-ui-i6ovbf"
          >
            e0ece5a
          </code>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-description"
      >
        <span>
          Failing command: Long description that requirese use of the inline definition component. This would ...
           
          <span
            class="leafygreen-ui-vm4wms"
            tabindex="0"
          >
            <small
              class="css-1ghrn41-ButtonText eq9i5u70 leafygreen-ui-6flbwy"
            >
              more
            </small>
          </span>
        </span>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Distro:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="task-distro-link"
          href="/distro/ubuntu1604-small/settings/general"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            ubuntu1604-small
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-ami"
      >
        AMI: 
        ami-0c83bb0a9f48c15bf
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Host:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="task-host-link"
          href="/host/i-0e0e62799806e037d"
          target="_self"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            i-0e0e62799806e037d
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="task-spawn-host-link"
          href="/spawn/host?distroId=ubuntu1604-small&spawnHost=True&taskId=someTaskId"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            Spawn host
          </span>
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Metadata.stories WithAbortMessage 1`] = `
<div>
  <div
    class="css-1ej7kz3-Container egzqr3n0"
  >
    <div
      class="css-1l8tpk-SiderCard e1am38ss0 leafygreen-ui-1ecxdul"
    >
      <div>
        <p
          class="css-1k03zl5-Title e1ul56zb1 leafygreen-ui-1miy0xp"
        >
          Task Metadata
        </p>
        <hr
          class="css-qqg5h5-Divider eb6szep0"
        />
      </div>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-build-variant"
      >
        Build Variant:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="build-variant-link"
          href="/version/spruce_ubuntu1604_e0ece5ad52ad01630bdf29f55b9382a26d6256b3_20_08_26_19_20_41/tasks?page=0&variant=%5Eubuntu1604%24"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            Ubuntu 16.04
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-project"
      >
        Project:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="project-link"
          href="/project/spruce/patches"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            spruce
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Submitted by: 
        mohamed.khelif
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Estimated time to start:
         
        <span
          data-cy="task-metadata-estimated_start"
        >
          1s
        </span>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-base-commit-duration"
      >
        Base commit duration: 
        nullms
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Base commit:
         
        <a
          class="lg-ui-0000 leafygreen-ui-hvznge"
          data-cy="base-task-link"
          href="/task/spruce_ubuntu1604_e2e_test_e0ece5ad52ad01630bdf29f55b9382a26d6256b3_20_08_26_19_20_41"
        >
          <code
            class="leafygreen-ui-i6ovbf"
          >
            e0ece5a
          </code>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-description"
      >
        <span>
          Failing command: Long description that requirese use of the inline definition component. This would ...
           
          <span
            class="leafygreen-ui-vm4wms"
            tabindex="0"
          >
            <small
              class="css-1ghrn41-ButtonText eq9i5u70 leafygreen-ui-6flbwy"
            >
              more
            </small>
          </span>
        </span>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Distro:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="task-distro-link"
          href="/distro/ubuntu1604-small/settings/general"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            ubuntu1604-small
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-ami"
      >
        AMI: 
        ami-0c83bb0a9f48c15bf
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Host:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="task-host-link"
          href="/host/i-0e0e62799806e037d"
          target="_self"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            i-0e0e62799806e037d
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="task-spawn-host-link"
          href="/spawn/host?distroId=ubuntu1604-small&spawnHost=True&taskId=someTaskId"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            Spawn host
          </span>
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Metadata.stories WithDependencies 1`] = `
<div>
  <div
    class="css-1ej7kz3-Container egzqr3n0"
  >
    <div
      class="css-1l8tpk-SiderCard e1am38ss0 leafygreen-ui-1ecxdul"
    >
      <div>
        <p
          class="css-1k03zl5-Title e1ul56zb1 leafygreen-ui-1miy0xp"
        >
          Task Metadata
        </p>
        <hr
          class="css-qqg5h5-Divider eb6szep0"
        />
      </div>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-build-variant"
      >
        Build Variant:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="build-variant-link"
          href="/version/spruce_ubuntu1604_e0ece5ad52ad01630bdf29f55b9382a26d6256b3_20_08_26_19_20_41/tasks?page=0&variant=%5Eubuntu1604%24"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            Ubuntu 16.04
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-project"
      >
        Project:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="project-link"
          href="/project/spruce/patches"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            spruce
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Submitted by: 
        mohamed.khelif
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Estimated time to start:
         
        <span
          data-cy="task-metadata-estimated_start"
        >
          1s
        </span>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-base-commit-duration"
      >
        Base commit duration: 
        nullms
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Base commit:
         
        <a
          class="lg-ui-0000 leafygreen-ui-hvznge"
          data-cy="base-task-link"
          href="/task/spruce_ubuntu1604_e2e_test_e0ece5ad52ad01630bdf29f55b9382a26d6256b3_20_08_26_19_20_41"
        >
          <code
            class="leafygreen-ui-i6ovbf"
          >
            e0ece5a
          </code>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-description"
      >
        <span>
          Failing command: Long description that requirese use of the inline definition component. This would ...
           
          <span
            class="leafygreen-ui-vm4wms"
            tabindex="0"
          >
            <small
              class="css-1ghrn41-ButtonText eq9i5u70 leafygreen-ui-6flbwy"
            >
              more
            </small>
          </span>
        </span>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Distro:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="task-distro-link"
          href="/distro/ubuntu1604-small/settings/general"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            ubuntu1604-small
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
        data-cy="task-metadata-ami"
      >
        AMI: 
        ami-0c83bb0a9f48c15bf
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        Host:
         
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="task-host-link"
          href="/host/i-0e0e62799806e037d"
          target="_self"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            i-0e0e62799806e037d
          </span>
        </a>
      </p>
      <p
        class="css-1tu2ym0-Item-wordBreakCss e1ul56zb0 leafygreen-ui-1tb6tuo"
      >
        <a
          class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
          data-cy="task-spawn-host-link"
          href="/spawn/host?distroId=ubuntu1604-small&spawnHost=True&taskId=someTaskId"
        >
          <span
            class="leafygreen-ui-1ewnca3"
          >
            Spawn host
          </span>
        </a>
      </p>
      <div
        class="css-5f1fjg-DependsOnContainer ebphozh1"
        data-cy="depends-on-container"
      >
        <div>
          <p
            class="css-1k03zl5-Title e1ul56zb1 leafygreen-ui-1miy0xp"
          >
            Depends On
          </p>
          <hr
            class="css-qqg5h5-Divider eb6szep0"
          />
        </div>
        <div
          class="css-3ay4yh-DependsOnWrapper e1dgw5p64"
        >
          <div
            class="css-dcee98-LeftContainer e1dgw5p63"
          >
            <svg
              aria-label="Failure Icon"
              fill="currentColor"
              height="16"
              viewBox="0 0 21 21"
              width="16"
            >
              <path
                d="M17.7783.807588c-.7811-.7810482-2.0474-.7810486-2.8285 0L10.0001 5.75734 5.05035.807588c-.78105-.7810484-2.04738-.7810482-2.82843 0L.80771 2.2218c-.7810481.78105-.7810485 2.04738 0 2.82843l4.94975 4.94975L.80771 14.9497c-.7810474.7811-.7810481 2.0474 0 2.8285l1.41421 1.4142c.78105.781 2.04738.781 2.82843 0l4.94975-4.9498 4.9497 4.9498c.7811.781 2.0474.781 2.8285 0l1.4142-1.4142c.781-.7811.781-2.0474 0-2.8285l-4.9498-4.94972 4.9498-4.94975c.781-.78105.781-2.04738 0-2.82843L17.7783.807588Z"
                fill="#DB3030"
              />
            </svg>
          </div>
          <div
            class="css-19njn6m-RightContainer e1dgw5p62"
          >
            <a
              class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
              data-cy="depends-on-link"
              href="/task/some_task_id_1"
            >
              <span
                class="leafygreen-ui-1ewnca3"
              >
                Some dep
              </span>
            </a>
            <small
              class="css-ojz0s8-Subtitle e1dgw5p61 leafygreen-ui-6flbwy"
            >
              in 
              ubuntu1604
            </small>
            <div
              class="css-1x0kgpn-StyledBadge e1dgw5p60 leafygreen-ui-n4itms"
            >
              Must succeed
            </div>
          </div>
        </div>
        <div
          class="css-3ay4yh-DependsOnWrapper e1dgw5p64"
        >
          <div
            class="css-dcee98-LeftContainer e1dgw5p63"
          >
            <svg
              aria-label="Calendar Icon"
              class="leafygreen-ui-19a71cx"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 2a1 1 0 0 1 2 0v1a1 1 0 0 1-2 0V2Z"
                fill="currentColor"
              />
              <path
                clip-rule="evenodd"
                d="M9 3H7a2 2 0 1 1-4 0 2 2 0 0 0-2 2v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2 2 2 0 1 1-4 0Zm3 4H9v3h3V7Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                d="M10 3a1 1 0 1 0 2 0V2a1 1 0 1 0-2 0v1Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="css-19njn6m-RightContainer e1dgw5p62"
          >
            <a
              class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
              data-cy="depends-on-link"
              href="/task/some_task_id_2"
            >
              <span
                class="leafygreen-ui-1ewnca3"
              >
                Some dep
              </span>
            </a>
            <small
              class="css-ojz0s8-Subtitle e1dgw5p61 leafygreen-ui-6flbwy"
            >
              in 
              ubuntu1604
            </small>
            <div
              class="css-1x0kgpn-StyledBadge e1dgw5p60 leafygreen-ui-1qtf7xy"
            >
              Must finish
            </div>
          </div>
        </div>
        <div
          class="css-3ay4yh-DependsOnWrapper e1dgw5p64"
        >
          <div
            class="css-dcee98-LeftContainer e1dgw5p63"
          >
            <svg
              aria-label="Checkmark Icon"
              class="leafygreen-ui-zgssm"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="m6.306 9.05 5.455-5.455a1 1 0 0 1 1.414 0l.707.707a1 1 0 0 1 0 1.414l-7.067 7.068a1 1 0 0 1-1.5-.098l-3.049-3.97a1 1 0 0 1 .184-1.402l.595-.457a1.25 1.25 0 0 1 1.753.23L6.306 9.05Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="css-19njn6m-RightContainer e1dgw5p62"
          >
            <a
              class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
              data-cy="depends-on-link"
              href="/task/some_task_id_3"
            >
              <span
                class="leafygreen-ui-1ewnca3"
              >
                Some dep
              </span>
            </a>
            <small
              class="css-ojz0s8-Subtitle e1dgw5p61 leafygreen-ui-6flbwy"
            >
              in 
              ubuntu1604
            </small>
            <div
              class="css-1x0kgpn-StyledBadge e1dgw5p60 leafygreen-ui-ud6teo"
            >
              Must fail
            </div>
          </div>
        </div>
        <div
          class="css-3ay4yh-DependsOnWrapper e1dgw5p64"
        >
          <div
            class="css-dcee98-LeftContainer e1dgw5p63"
          >
            <svg
              aria-label="Refresh Icon"
              class="leafygreen-ui-4hxv4h"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.033 2c2.699 0 4.95 1.718 5.467 4h1.414c.542 0 .792.672.383 1.026l-2.482 2.15a.584.584 0 0 1-.765 0l-2.482-2.15A.584.584 0 0 1 9.951 6h1.447c-.469-1.085-1.68-2-3.365-2-1.026 0-1.877.34-2.491.85-.243.202-.618.203-.817-.043l-.61-.754a.468.468 0 0 1 .044-.651C5.163 2.534 6.53 2 8.033 2ZM3.95 6.843a.584.584 0 0 0-.765 0L.703 8.992a.584.584 0 0 0 .383 1.026h1.418C3.03 12.291 5.275 14 7.967 14c1.505 0 2.87-.534 3.874-1.402a.468.468 0 0 0 .044-.65l-.61-.755c-.2-.246-.574-.245-.817-.043-.614.51-1.465.85-2.49.85-1.676 0-2.883-.904-3.358-1.982H6.05a.584.584 0 0 0 .383-1.026L3.95 6.842Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="css-19njn6m-RightContainer e1dgw5p62"
          >
            <a
              class="lg-ui-0001 css-16hif17-StyledLink leafygreen-ui-1gfngq5"
              data-cy="depends-on-link"
              href="/task/some_task_id_4"
            >
              <span
                class="leafygreen-ui-1ewnca3"
              >
                Some dep
              </span>
            </a>
            <small
              class="css-ojz0s8-Subtitle e1dgw5p61 leafygreen-ui-6flbwy"
            >
              in 
              ubuntu1604
            </small>
            <div
              class="css-1x0kgpn-StyledBadge e1dgw5p60 leafygreen-ui-ud6teo"
            >
              Must fail
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
